aligned containers and fixed margins for dashboard, import page, all profiles, and tags index

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -23,8 +23,8 @@
 }
 
 .container-tags {
-  width: 700px;
-  margin-left: 60px;
+  // width: 900px;
+  // margin-left: 60px;
 }
 
 .container-social {
@@ -38,4 +38,15 @@
   margin: auto;
   margin-top: 35px;
   margin-bottom: 30px;
+}
+
+.container-import {
+  width: 700px;
+  margin: 0px auto;
+}
+
+.container-profile{
+  width: 800px;
+  margin-top: 20px;
+  margin: auto;
 }
